Fix title looking weird in gallery on mobile

--- a/style/gallery.scss
+++ b/style/gallery.scss
@@ -59,11 +59,11 @@ $gallery-sidebar-width: 25rem;
   margin-bottom: 0.5rem;
 
   &>*:not(:last-child) {
-    margin-right: 1rem;
+    //margin-right: 1rem;
   }
 
   &>*:last-child {
-    margin-left: auto;
+    //margin-left: auto;
   }
 }
 
@@ -78,17 +78,30 @@ $gallery-sidebar-width: 25rem;
 
 .gallery-label {
   display: flex;
-  flex-direction: row;
-  align-items: baseline;
+  flex-direction: column;
+  align-items: center;
   margin: 0 auto;
+  padding-left: 1em;
+  padding-right: 1em;
+  box-sizing: border-box;
+  width: calc(100% - 7rem);
 
   &>*:not(:last-child) {
-    margin-right: 0.4em;
+    //margin-right: 0.4em;
+  }
+
+  &>* {
+    width: 100%;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    text-align: center;
   }
 }
 
 .gallery-label-main {
   font-size: 1rem;
+  margin: 0;
 }
 
 .gallery-label-note {
